--- a/arch/arm/configs/cyanogenmod_fascinatemtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_fascinatemtd_defconfig
@@ -1,9 +1,15 @@
 CONFIG_EXPERIMENTAL=y
-CONFIG_KERNEL_LZMA=y
+CONFIG_LOCALVERSION="-KK44-notest-fassy"
+# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_KERNEL_XZ=y
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
+CONFIG_AUDIT=y
+CONFIG_AUDIT_GENERIC=y
+CONFIG_TINY_PREEMPT_RCU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
+CONFIG_LOG_BUF_SHIFT=12
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
@@ -16,15 +22,22 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_INITRAMFS_SOURCE="source/usr/fascinatemtd_initramfs.list"
 CONFIG_INITRAMFS_COMPRESSION_NONE=y
 # CONFIG_RD_GZIP is not set
+CONFIG_RD_LZ4=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_PANIC_TIMEOUT=5
-CONFIG_KALLSYMS_ALL=y
+# CONFIG_SYSCTL_SYSCALL is not set
+# CONFIG_KALLSYMS is not set
+# CONFIG_BUG is not set
+# CONFIG_ELF_CORE is not set
 CONFIG_ASHMEM=y
 # CONFIG_AIO is not set
 CONFIG_EMBEDDED=y
-CONFIG_PERF_COUNTERS=y
-CONFIG_PROFILING=y
-CONFIG_OPROFILE=y
+# CONFIG_PERF_EVENTS is not set
+# CONFIG_VM_EVENT_COUNTERS is not set
+# CONFIG_COMPAT_BRK is not set
+# CONFIG_SLUB_DEBUG is not set
+CONFIG_SLUB=y
+# CONFIG_SLQB is not set
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
@@ -35,24 +48,31 @@ CONFIG_DEFAULT_ROW=y
 CONFIG_ARCH_S5PV210=y
 CONFIG_S3C_LOWLEVEL_UART_PORT=2
 CONFIG_S5P_HIGH_RES_TIMERS=y
+# CONFIG_S5PV210_CORESIGHT is not set
 CONFIG_MACH_ARIES=y
 CONFIG_PHONE_ARIES_CDMA=y
 CONFIG_SAMSUNG_FASCINATE=y
 CONFIG_WIFI_CONTROL_FUNC=y
+# CONFIG_VIDEO_TV20 is not set
 CONFIG_ARM_THUMBEE=y
 CONFIG_FIQ_DEBUGGER=y
 CONFIG_FIQ_DEBUGGER_CONSOLE=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
+# CONFIG_OABI_COMPAT is not set
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
+CONFIG_KSM_CHECK_PAGE=y
+CONFIG_CLEANCACHE=y
+CONFIG_FRONTSWAP=y
 CONFIG_CMDLINE="console=ttyFIQ0,115200 init=/init"
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_IDLE=y
 CONFIG_DVFS_LIMIT=y
@@ -73,6 +93,13 @@ CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_XFRM_MODE_BEET is not set
 # CONFIG_INET_LRO is not set
+CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_BIC is not set
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_DEFAULT_HTCP=y
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -83,8 +110,10 @@ CONFIG_INET6_IPCOMP=y
 CONFIG_IPV6_MIP6=y
 CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
+CONFIG_NETWORK_SECMARK=y
 CONFIG_NETFILTER=y
 CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_SECMARK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_NF_CT_PROTO_SCTP=y
@@ -101,12 +130,15 @@ CONFIG_NF_CT_NETLINK=y
 CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
+CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
@@ -146,6 +178,7 @@ CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_IP_NF_RAW=y
+CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
 CONFIG_IP_NF_ARPFILTER=y
 CONFIG_IP_NF_ARP_MANGLE=y
@@ -212,6 +245,8 @@ CONFIG_DM_UEVENT=y
 CONFIG_NETDEVICES=y
 CONFIG_IFB=y
 CONFIG_TUN=y
+# CONFIG_NETDEV_1000 is not set
+# CONFIG_NETDEV_10000 is not set
 CONFIG_BCMDHD=m
 CONFIG_BCMDHD_FW_PATH="/vendor/firmware/fw_bcmdhd.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/vendor/firmware/nvram_net.txt"
@@ -244,6 +279,7 @@ CONFIG_TABLET_USB_WACOM=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_MXT224=y
 CONFIG_INPUT_MISC=y
+# CONFIG_INPUT_BMA023 is not set
 CONFIG_INPUT_KR3DH=y
 CONFIG_INPUT_YAS529=y
 CONFIG_INPUT_YAS529_POSITION=3
@@ -259,6 +295,8 @@ CONFIG_VT_CONSOLE=y
 CONFIG_HW_CONSOLE=y
 # CONFIG_VT_HW_CONSOLE_BINDING is not set
 # CONFIG_LEGACY_PTYS is not set
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_SAMSUNG=y
 CONFIG_SERIAL_SAMSUNG_CONSOLE=y
 CONFIG_HW_RANDOM=y
@@ -296,6 +334,7 @@ CONFIG_MEDIA_SUPPORT=y
 # CONFIG_MEDIA_TUNER_TDA18218 is not set
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
 CONFIG_VIDEO_DEV=y
+# CONFIG_VIDEO_S5KA3DFX is not set
 CONFIG_VIDEO_CE147=y
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
@@ -307,10 +346,12 @@ CONFIG_PVR_SGX=y
 CONFIG_PVR_NEED_PVR_DPF=y
 CONFIG_PVR_NEED_PVR_ASSERT=y
 CONFIG_PVR_USSE_EDM_STATUS_DEBUG=y
+# CONFIG_PVR_DUMP_MK_TRACE is not set
 CONFIG_PVR_LINUX_MEM_AREA_POOL=y
+# CONFIG_RADIO_SI4709 is not set
 CONFIG_FB=y
 CONFIG_FB_S3C=y
-CONFIG_FB_S3C_NR_BUFFERS=7
+CONFIG_FB_S3C_NR_BUFFERS=2
 CONFIG_FB_S3C_TL2796=y
 CONFIG_FB_S3C_MDNIE=y
 # CONFIG_FB_S3C_LVDS is not set
@@ -383,6 +424,7 @@ CONFIG_HID_WACOM=y
 CONFIG_HID_ZEROPLUS=y
 CONFIG_ZEROPLUS_FF=y
 CONFIG_HID_ZYDACRON=y
+# CONFIG_SND_WM8994_EXTENSIONS_FM is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_G_ANDROID=y
@@ -404,21 +446,28 @@ CONFIG_ANDROID_RAM_CONSOLE_ERROR_CORRECTION=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ZRAM=y
-CONFIG_EXT2_FS=y
+CONFIG_ZRAM_FOR_ANDROID=y
 CONFIG_EXT4_FS=y
-# CONFIG_EXT4_FS_XATTR is not set
+CONFIG_EXT4_FS_XATTR=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
+CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_DNOTIFY is not set
-CONFIG_FUSE_FS=m
+CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_YAFFS_FS=y
+CONFIG_YAFFS_XATTR=y
 CONFIG_CRAMFS=y
 CONFIG_ROMFS_FS=y
 CONFIG_SYSV_FS=y
-CONFIG_CIFS=m
+CONFIG_CIFS=y
+# CONFIG_CIFS_STATS is not set
+CONFIG_CIFS_WEAK_PW_HASH=y
+CONFIG_CIFS_XATTR=y
+CONFIG_CIFS_POSIX=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_BSD_DISKLABEL=y
 CONFIG_SOLARIS_X86_PARTITION=y
@@ -428,17 +477,28 @@ CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=m
 CONFIG_PRINTK_TIME=y
+# CONFIG_ENABLE_WARN_DEPRECATED is not set
+# CONFIG_ENABLE_MUST_CHECK is not set
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_PREEMPT is not set
 CONFIG_DEBUG_INFO=y
-CONFIG_SYSCTL_SYSCALL_CHECK=y
-CONFIG_SCHED_TRACER=y
-CONFIG_DYNAMIC_DEBUG=y
+CONFIG_DEBUG_INFO_REDUCED=y
+CONFIG_ENABLE_DEFAULT_TRACERS=y
 # CONFIG_ARM_UNWIND is not set
-CONFIG_DEBUG_USER=y
 CONFIG_DEBUG_S3C_UART=2
-CONFIG_CRYPTO_MD4=y
+CONFIG_SECURITY=y
+CONFIG_SECURITY_NETWORK=y
+CONFIG_LSM_MMAP_MIN_ADDR=4096
+CONFIG_SECURITY_SELINUX=y
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+CONFIG_SECURITY_SELINUX_AVC_STATS=y
+CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
+CONFIG_DEFAULT_SECURITY_SELINUX=y
+CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRC_CCITT=y
